--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-    <div class="cloud" id="auth" style="display: none;">
+    <div class="cloud" id="auth">
         <center>
         <img src="images/logo.png" class="logo">
         </center>
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div id="code">
+    <div id="code" style="display: none;">
         <center>
         <img src="images/logo.png" class="logo">
         </center>
