--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
         </span>
 
         <div class="inputcode">
-            <input type="text" id="c1" oninput="inp1(event)">
-            <input type="text" id="c2" oninput="inp2(event)">
-            <input type="text" id="c3" oninput="inp3(event)">
-            <input type="text" id="c4" oninput="inp4(event)">
-            <input type="text" id="c5" oninput="inp5(event)">
-            <input type="text" id="c6" oninput="inp6(event)">
+            <input type="number" id="c1" oninput="inp1(event)">
+            <input type="number" id="c2" oninput="inp2(event)">
+            <input type="number" id="c3" oninput="inp3(event)">
+            <input type="number" id="c4" oninput="inp4(event)">
+            <input type="number" id="c5" oninput="inp5(event)">
+            <input type="number" id="c6" oninput="inp6(event)">
         </div>
 
         <span class="again">
