--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             Код подтверждения отправлен на номер
         </span>
         <span class="number">
-            +7 950 ***-**-15
+            +7 9** ***-**-<a id="last">15</a>
         </span>
 
         <span class="codelabel">
